# fundamental-analysis

./: .gitignore  Makefile  README.md  docker-compose.yaml  download_data.py  embar.toml  load-orders.py  main.py  requirements.txt
app/: database_manager.py  download_data.py  main.py  schema.py
archive/: manage_portfolio.py
backend/: pyproject.toml  requirements.txt
backend/app/: database_manager.py  main.py  schema.py
backend/app/api/v1/: cash_flow.py
backend/app/db/: database.py
backend/app/db/schemas/: cash_flow.py  cash_flow_category.py  cash_flow_tag.py  transaction.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: c00d25a05cd4_initial_migration.py
backend/app/services/: cash_flows.py
db/: atlas.hcl  schema.sql
db/migrations/: 20260411120941.sql  20260411132254.sql  20260414194818.sql  20260414195115.sql  20260414195119.sql  20260414195217.sql  atlas.sum
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  InvestmentTrades.jsx  index.css
fundamental-analysis/: database_manager.py
writeups/: 1_running_database.md  2_connecting_database_python.md
