[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "sqlmodel>=0.0.39",
    "ty>=0.0.55",
    "uv>=0.11.25",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini-options]
pythonpath="."
